--- a/ProcurementTracker/appsettings.json
+++ b/ProcurementTracker/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProcurementTracker-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProcurementTrackerContext": "Server=(localdb)\\mssqllocaldb;Database=ProcurementTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
