Edit procurement details

--- a/ProcurementTracker/appsettings.json
+++ b/ProcurementTracker/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ProcurementTrackerContext": "Server=(localdb)\\mssqllocaldb;Database=ProcurementTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProcurementTrackerContext": "Server=DESKTOP-VE5CFEU;Initial Catalog=ProcurementTracker;User Id=sa;Password=JSNic0le;Integrated Security=False;"
   },
   "Logging": {
     "LogLevel": {
