Closes #86 - Setup of Authentication and Authorization

--- a/ProcurementTracker/ProcurementTracker.csproj
+++ b/ProcurementTracker/ProcurementTracker.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-ProcurementTracker-E165A26F-7F76-4B0A-A0FD-60279C25CF75</UserSecretsId>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
