--- a/ProcurementTracker/appsettings.json
+++ b/ProcurementTracker/appsettings.json
@@ -1,11 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Trace",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Warning",
+            "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+        },
+        "EventLog": {
+            "LogLevel": {
+                "Default": "Information",
+                "Microsoft": "Warning"
+            }
+        }
+    },
   "AllowedHosts": "*"
 }
